@@ -563,9 +563,9 @@ class TradeSearchView(ModelView):
             return u'请输入查询字符串'
         
         if q.isdigit():
-            trades = MergeTrade.objects.filter(Q(id=q)|Q(tid=q)|Q(buyer_nick=q)|Q(receiver_name=q))
+            trades = MergeTrade.objects.filter(Q(id=q)|Q(tid=q)|Q(buyer_nick=q)|Q(receiver_name=q)|Q(receiver_mobile=q))
         else:
-            trades = MergeTrade.objects.filter(Q(buyer_nick=q)|Q(receiver_name=q))
+            trades = MergeTrade.objects.filter(Q(buyer_nick=q)|Q(receiver_name=q)|Q(receiver_phone=q))
         trade_list = []
         for trade in trades:
             trade_dict       = {}
