@@ -1,3 +1,6 @@
+######### 2013-2-22   #########
+create index idx_mergetrade_receiver_mobile on shop_trades_mergetrade(receiver_mobile);
+create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
 ########  2013-2-21   #########
 alter table shop_trades_mergetrade add column return_out_sid varchar(64) NOT NULL;
 create index index_mergetrade_return_out_sid on shop_trades_mergetrade(return_out_sid);
